# src/controllers/blog.js
@@ -13,14 +13,19 @@ module.exports = {
     /*
         #swagger.tags = ["Blogs"]
         #swagger.summary = "List Blogs"
+        #swagger.parameters['author'] = {
+          in: 'query',
+          name: 'author',
+        }
         #swagger.description = `
-            You can send query with endpoint for search[], sort[], page and limit.
+            You can use filter[] & search[] & sort[] & page & limit queries with endpoint.
             <ul> Examples:
                 <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
                 <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
-                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
-                <li>URL/?<b>page=2&limit=1</b></li>
+                <li>URL/?<b>sort[field1]=asc&sort[field2]=desc</b></li>
+                <li>URL/?<b>limit=10&page=1</b></li>
             </ul>
+            You can use author=userId query for get all blogs of any user.
         `
     */
 
@@ -107,8 +112,8 @@ module.exports = {
   //! /:id -> DELETE
   delete: async (req, res) => {
     /*
-        #swagger.tags = ["Categories"]
-        #swagger.summary = "Delete Category"
+        #swagger.tags = ["Blogs"]
+        #swagger.summary = "Delete Blog"
     */
 
     const data = await Blog.deleteOne({ _id: req.params.id });
