# src/controllers/user.js
@@ -14,12 +14,12 @@ module.exports = {
         #swagger.tags = ["Users"]
         #swagger.summary = "List Users"
         #swagger.description = `
-            You can send query with endpoint for search[], sort[], page and limit.
+            You can use filter[] & search[] & sort[] & page & limit queries with endpoint.
             <ul> Examples:
                 <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
                 <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
-                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
-                <li>URL/?<b>page=2&limit=1</b></li>
+                <li>URL/?<b>sort[field1]=asc&sort[field2]=desc</b></li>
+                <li>URL/?<b>limit=10&page=1</b></li>
             </ul>
         `
     */
@@ -43,14 +43,16 @@ module.exports = {
                 in: 'body',
                 required: true,
                 schema: {
-                    "username": "test",
-                    "password": "1234",
-                    "email": "test@site.com",
-                    "isActive": true,
-                    "isStaff": false,
-                    "isAdmin": false,
+                  "username": "test",
+                  "password": "1234",
+                  "email": "test@site.com",
+                  "firstName": "test",
+                  "lastName": "test",
+                  "image": "",
+                  "city": "",
+                  "bio": ""
                 }
-            }
+          }
     */
 
     const data = await User.create(req.body);
@@ -85,12 +87,14 @@ module.exports = {
                 in: 'body',
                 required: true,
                 schema: {
-                    "username": "test",
-                    "password": "1234",
-                    "email": "test@site.com",
-                    "isActive": true,
-                    "isStaff": false,
-                    "isAdmin": false,
+                  "username": "test",
+                  "password": "1234",
+                  "email": "test@site.com",
+                  "firstName": "test",
+                  "lastName": "test",
+                  "image": "",
+                  "city": "",
+                  "bio": ""
                 }
             }
     */
