# src/routers/category.js
@@ -9,10 +9,10 @@ const Category = require("../controllers/category");
 
 /* -------------------------------------------------------------------------- */
 //? BlogCategory:
-router.route("/categories").get(Category.list).post(Category.create);
+router.route("/").get(Category.list).post(Category.create);
 
 router
-  .route("/categories/:id")
+  .route("/:id")
   .get(Category.read)
   .put(Category.update)
   .patch(Category.update)
